Use tokens instead of Basic auth
