# backend/api/openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: Pet Sitter Service
   version: "1.3"
 servers:
-- url: http://localhost:8080
+- url: /api
 tags:
 - name: Users
 - name: Jobs
@@ -33,6 +33,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
       x-swagger-router-controller: Users
+      security: []
   /users/{id}:
     get:
       tags:
@@ -54,8 +55,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Users
     put:
       tags:
@@ -82,8 +81,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Users
     delete:
       tags:
@@ -101,8 +98,6 @@ paths:
       responses:
         "204":
           description: No Content
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Users
   /users/{id}/jobs:
     get:
@@ -131,8 +126,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/Job'
                 x-content-type: application/json
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
   /users/{id}/job-applications:
     get:
@@ -159,8 +152,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/JobApplication'
                 x-content-type: application/json
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
   /jobs:
     get:
@@ -196,8 +187,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/inline_response_200'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
     post:
       tags:
@@ -222,8 +211,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Job'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
   /jobs/{id}:
     get:
@@ -246,8 +233,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Job'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
     put:
       tags:
@@ -274,8 +259,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Job'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
     delete:
       tags:
@@ -293,8 +276,6 @@ paths:
       responses:
         "204":
           description: No Content
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
   /jobs/{id}/job-applications:
     get:
@@ -320,8 +301,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/JobApplication'
                 x-content-type: application/json
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
     post:
       tags:
@@ -348,8 +327,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/JobApplication'
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
   /job-applications/{id}:
     put:
@@ -381,8 +358,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/JobApplication'
                 x-content-type: application/json
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
     delete:
       tags:
@@ -400,9 +375,32 @@ paths:
       responses:
         "204":
           description: Job application details
-      security:
-      - SimpleToken: []
       x-swagger-router-controller: Jobs
+  /sessions:
+    post:
+      tags:
+      - Users
+      summary: Start Session (Login)
+      operationId: startSession
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Session'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      security: []
+      x-swagger-router-controller: Users
 components:
   schemas:
     JobApplication:
@@ -655,8 +653,18 @@ components:
         name: name
         years_old: 0
         breed: breed
+    Session:
+      title: Session
+      type: object
+      properties:
+        user_id:
+          type: string
+        auth_header:
+          type: string
   securitySchemes:
-    SimpleToken:
-      type: http
-      description: Use the `email`:`password` as the Basic Auth
-      scheme: basic
+    SessionToken:
+      type: apiKey
+      in: header
+      name: Authorization
+security:
+  - SessionToken: []
